2004-11-02  Radek Doulik  <rodo@ximian.com>

	* htmlstyle.c: added padding

	* htmlengine.c: put additional cluev around display blocks to be
	able to draw borders specified in style="...", we will use that in
	evolution mail view in <DIV></DIV> blocks

	* htmlcluev.c: added background color, use padding from style

	* gtkhtmldebug.c (gtk_html_debug_dump_object): moved debug details
	for text object from simple to normal debug dump

2004-11-01  Radek Doulik  <rodo@ximian.com>

	* added id to html object and border to html cluev

2004-10-22  Changwoo Ryu  <cwryu@debian.org>

	* htmlclueflow.c (utf8_width): new function to calculate UTF-8
	string's cell width
	(utf8_length_in_width): new function to find the length of string
	starting on the given string which is not exceeding the specified
	width
	(save_plain): wrap lines by cell widths rather than byte lengths.

	Fixes #67022

2004-10-13  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-text.c (upper_lower): set text_len and
	text_bytes to right values

	Fixes #68092

2004-10-11  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_size_request): make sure we keep layout in
	the same state as before we were called (scrolled window may issue
	additional size request after widget was already allocated)

	Fixes #67707

2004-10-08  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_remove_unwanted_line_breaks): added "$+?"
	to nonbreaking characters (comon in urls)

	Addition to #54852 fix

2004-10-01  JP Rosevear  <jpr@novell.com>

	* libgtkhtml.pc.in: expose gtkhtml_apiverison as a variable

2004-09-28  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (save_plain): do not let wi drop under clen. it
	results into negative len value and outbounded memory
	reads. (might help with #62597)

2004-09-23  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (expand_relative): do not search for ":" in url, it
	may be used in other parts than uri scheme delimiter. instead